--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
   },
   "dependencies": {
     "@firebase/firestore": "^1.15.5",
+    "axios": "^0.19.0",
     "firebase": "^7.15.5",
-    "axios": "^0.19.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@firebase/firestore-types": "^1.11.0",
+    "@types/chrome": "0.0.117",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
     "copy-webpack-plugin": "^5.0.3",
+    "rimraf": "^3.0.2",
     "ts-loader": "^7.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.2.2",
-    "@types/chrome": "0.0.117"
+    "webpack-merge": "^4.2.2"
   }
 }
