--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "copy-webpack-plugin": "^5.0.3",
     "rimraf": "^3.0.2",
     "ts-loader": "^7.0.5",
+    "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2"
